2010-07-14  Murray Cumming  <murrayc@murrayc.com>

	More rearranging of includes for the undef in gdkmm/region.hg.

	* gtk/gtkmm/menu_elems.[h|cc]:
	* gtk/gtkmm/stock.[h|cc]:
	* gtk/src/bin.[hg|ccg]:
	* gtk/src/iconinfo.[hg|ccg]:
	* gtk/src/liststore.hg:
	* gtk/src/main.hg:
	* gtk/src/stockitem.hg:
	* gtk/src/tooltips.ccg:
	* gtk/src/treedragsource.hg:
	* gtk/src/treemodel.[hg|ccg]:
	* gtk/src/treemodelfilter.[hg|ccg]:
	* gtk/src/treemodelsort.hg:
	* gtk/src/treepath.hg:
	* gtk/src/treerowreference.hg:
	* gtk/src/treeselection.hg:
	* gtk/src/treestore.hg: Include treepath.h before others, such as
    treemodel.h, so that gdkmm/region is (indirectly) included before the
    others, so that is the first include of gdk/gdk.h, so our undef is used.

2010-07-13  Murray Cumming  <murrayc@murrayc.com>

	Yet more rearranging of includes for the undef in box.hg

	* gtk/src/treedragdest.hg: Include treemodel.h later, because it
    includes gtk/gtk.h without the undef.

2010-07-13  Murray Cumming  <murrayc@murrayc.com>

	Even more work on the undef in box.hg.

	* gdk/gdkmm.h:
	* gtk/gtkmm.h:
	* gtk/src/box.hg:
	* gtk/src/main.hg:
	* gtk/src/table.hg:
	* gtk/src/textiter.hg:
	* gtk/src/treemodel.hg:
	* gtk/src/treeviewcolumn.hg: Rearrange includes to make it more likely
    that applications will be able to build with deprecated API disabled and
    warnings as errors.
    However, this is just impossible to do completely, because any other header
    (such as goocanvasitem.h via goocanvasmm) might include gtk/gtk.h first.

2010-07-13  Murray Cumming  <murrayc@murrayc.com>

	More work on the undef in box.hg.

	* gtk/src/combo.hg:
	* gtk/src/dialog.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/fontselection.hg: Make sure that box.h is included first,
    so the undef can work.

2010-07-13  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with warnings-as-errors with the latest gtk+ 2.22.x.

	* gdk/src/gdk_methods.defs: