@@ -21,7 +21,7 @@
 
 
 #include <sigc++/sigc++.h>
-#include <gdkmm/types.h>
+#include <gdkmm/types.h> //For GdkEventKey
 
 _DEFS(gtkmm,gtk)
 
