@@ -16,8 +16,8 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  */
 
-#include <gtkmm/main.h>
 #include "testwindow.h"
+#include <gtkmm/main.h>
 
 int main(int argc, char *argv[])
 {
