@@ -1,5 +1,15 @@
 2010-07-14  Murray Cumming  <murrayc@murrayc.com>
 
+    Rearrange include sin tests and demos for the undefs.
+
+	* demos/gtk-demo/demowindow.cc:
+	* demos/gtk-demo/demowindow.h:
+	* demos/gtk-demo/main.cc:
+	* tests/child_widget/main.cc: These now build again with
+    enable-warnings=fatal .
+
+2010-07-14  Murray Cumming  <murrayc@murrayc.com>
+
 	More rearranging of includes for the undef in gdkmm/region.hg.
 
 	* gtk/gtkmm/menu_elems.[h|cc]:
